Final fix for the overflowing boxes on phone/tab

--- a/style.css
+++ b/style.css
@@ -111,6 +111,8 @@ h2 {
     width: 30px;
     height: 30px;
     background-color: #F4F8D3;
+    display: flex;
+    justify-content: center;
 }
 
 .input-flex {
